--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -22,31 +22,31 @@ export const meta = {
 
 export const metadata = buildWorkMetadata(meta)
 
-TripleTen is an AI-powered personalized learning service that takes you from gaining skills to employment. Named by [Fortune](https://fortune.com/education/articles/best-software-engineering-bootcamps/) as the best overall tech bootcamp in the US, it serves students in both the US and LatAm markets and has 20k monthly active users. It's a part of Nebius, a NASDAQ-listed $20B AI cloud company. This is also the funniest place I’ve ever worked.
+The 2020s are marked by a tough economy and low upward mobility—especially in the US. For many, moving into tech has become a way to build stability and significantly improve their quality of life. And for most, the first step toward that goal is enrolling in a bootcamp.
 
-I was part of the founding team, driving the product design direction and taking on whatever else was needed to build a successful edtech product with strong design foundation.
+This isn’t an easy step, especially for people with busy lives, full-time jobs, and family responsibilities. Learning is hard, and only a few bootcamps truly deliver on their promise to take you from learning new skills to actually landing a job.
 
-The content below is being updated. If you’re curious to see something more relevant, please write to [hey@tonyfresher.com](mailto:hey@tonyfresher.com).
-
-🚧🚧🚧
+In that, TripleTen stands out. Its mix of deep technical expertise and strong learning know-how—along with owning its own learning platform—gave the team full control over the student experience and made it possible to build a truly high-quality, scalable, and personalized learning service.
 
 <div className="wide-block">
     <BrowserContainerGallery
         title="Platform"
         items={[
-            { src: '/tripleten/showcase/main.png', label: 'Home' },
-            { src: '/tripleten/showcase/calendar.png', label: 'Study calendar' },
-            { src: '/tripleten/showcase/skillset.png', label: 'Skillset' },
-            {
-                src: '/tripleten/showcase/program-contents.png',
-                label: 'Program contents'
-            },
-            { src: '/tripleten/showcase/theory.png', label: 'Theory' },
-            { src: '/tripleten/showcase/quiz.png', label: 'Quiz' }
+            { src: '/tripleten/showcase/home.png', label: 'Home' },
+            { src: '/tripleten/showcase/navigation.png', label: 'Learning path' },
+            { src: '/tripleten/showcase/lesson.png', label: 'Lesson' },
+            { src: '/tripleten/showcase/quiz.png', label: 'Quiz' },
+            { src: '/tripleten/showcase/project.png', label: 'Project' }
         ]}
     />
 </div>
 <span className="caption">TripleTen’s learning platform</span>
+
+In 2025, [Fortune](https://fortune.com/education/articles/best-software-engineering-bootcamps/) named TripleTen the best overall tech bootcamp in the US. Today, it serves over 20k monthly active users across the US and Latin America. TripleTen is a part of Nebius — a $20B NASDAQ-listed AI cloud company. This is also the funniest place I’ve ever worked.
+
+I joined TripleTen as part of the founding team and spent four years shaping the product design and adapting it to the needs of demanding US students. Over time, I took on broader design leadership across the organization — supporting other designers while keeping my sleeves firmly rolled up.
+
+## Dot, your AI buddy
 
 ## Homepage redesign
 
