--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -72,7 +72,7 @@ After the launch, we saw heavy usage of the extension, confirming our hypothesis
 
 Over the next six months, together with a small team of engineers and researchers, we integrated Dot into the platform and iterated on its conversational experience, tools, memory, voice mode, and various entry points across the learning journey.
 
-![Dot on the platform](/tripleten/dot/platform.png)
+<div className="wide-block">![Dot on the platform](/tripleten/dot/platform.png)</div>
 
 We managed to make Dot more than just another AI bot—it became a real buddy on the platform that helps right when you need it. Our A/B test clearly showed the impact: Dot’s support increased project submissions by 34%. It quickly became the platform’s most-used feature, with 47% MAU and over 200k messages sent each month. Equally important, Dot’s lively personality and tone of voice brought widespread student love, tons of positive feedback, and a 91% satisfaction rate.
 
