--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -64,7 +64,7 @@ Dot started as a quick experiment on our Discord server and stayed there for alm
 
 We began where students struggled the most—coding projects. It was also where we expected the most feedback. That’s why the first chat we built lived inside the VS Code extension.
 
-![VS Code](/tripleten/dot/vs-code.png)
+<div className="wide-block">![VS Code](/tripleten/dot/vs-code.png)</div>
 
 From the start, we took a “ship to learn” approach—built the simplest possible chat, added many events and feedback loops, and started watching what students asked, when, and how. A huge part of this was powered by PostHog’s toolkit for surveys, analytics, session replays, and feature flags, which we used heavily.
 
