--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -28,11 +28,9 @@ TripleTen is an AI-powered personalized learning service that takes you from gai
 
 ---
 
-The product was born in the early 2020s—a time of economic uncertainty and low upward mobility, especially in the US. For many, moving into tech became a path to stability and better life. And for most, the first step toward that goal was joining a bootcamp.
+The product was born in the early 2020s—a time of economic uncertainty and low upward mobility, especially in the US. For many, moving into tech became a path to stability and better life. And for everyone, that journey starts with learning.
 
-That’s a big leap, particularly for people with full-time jobs, families, and busy lives. Learning new skills is hard, and only a few bootcamps truly deliver on their promise to take you from learning to actually landing a job.
-
-TripleTen goes further than most. Its mix of deep technical expertise, strong learning design, and full control over the student experience made it possible to build a truly high-quality, scalable, and personalized learning service.
+TripleTen is the best way to learn a new job for people with busy lives. Its mix of deep technical expertise, strong learning design, and full control over the student experience made it possible to build a truly high-quality, scalable, and personalized learning platform.
 
 <div className="wide-block">
     <BrowserContainerGallery
