--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -96,7 +96,7 @@ So we decided to bring projects onto the platform itself. Today, most profession
 
 It was a major UX challenge. I had to rethink the entire platform layout so students could easily work in a complex environment while still having quick access to all the usual platform tools. The goal was to make it feel like the same familiar place—but with the power of a full professional workspace.
 
-It was also a big technical challenge. The first version for VS Code took three months to build, but the gradual rollout and support for more tools took another year.
+It was also a big technical challenge. The first version for VS Code took three months to build, but the gradual rollout, iteration, and support for more tools took another year.
 
 <div className="wide-block">
     <BrowserContainerGallery
