--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -26,12 +26,6 @@ export const metadata = buildWorkMetadata(meta)
 
 TripleTen is an AI-powered personalized learning service that takes you from gaining skills to employment. Named by [Fortune](https://fortune.com/education/articles/best-software-engineering-bootcamps/) as the best overall tech bootcamp in the US, it has over 20k monthly active learners across the US and Latin America. TripleTen is a part of Nebius, a $20B NASDAQ-listed AI cloud company. This is also the funniest place I’ve ever worked.
 
----
-
-The product was born in the early 2020s—a time of economic uncertainty and low upward mobility, especially in the US. For many, moving into tech became a path to stability and better life. And for everyone, that journey starts with learning.
-
-TripleTen is the best way to learn a new job for people with busy lives. Its mix of deep technical expertise, strong learning design, and full control over the student experience made it possible to build a truly high-quality, scalable, and personalized learning platform.
-
 <div className="wide-block">
     <BrowserContainerGallery
         title="Platform"
@@ -45,6 +39,8 @@ TripleTen is the best way to learn a new job for people with busy lives. Its mix
     />
 </div>
 <span className="caption">TripleTen’s learning platform</span>
+
+The product was born in the early 2020s—a time of economic uncertainty, especially in the US. For many, moving into tech became a path to stability and a better life. TripleTen became the best way to learn a tech job for people with busy lives, thanks to its mix of full control over the student experience, strong learning design, and deep expertise in tech and AI.
 
 I joined TripleTen as part of the founding team and spent four years shaping the product design and adapting it to the needs of demanding US students. Over time, I took on broader design leadership across the organization—supporting other designers while keeping my sleeves firmly rolled up.
 
