--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -24,7 +24,7 @@ export const meta = {
 
 export const metadata = buildWorkMetadata(meta)
 
-TripleTen is an AI-powered personalized learning service that takes you from gaining skills to employment. Named by [Fortune](https://fortune.com/education/articles/best-software-engineering-bootcamps/) as the best overall tech bootcamp in the US, it has over 20k monthly active learners across the US and Latin America. TripleTen is a part of Nebius, a $20B NASDAQ-listed AI cloud company. This is also the funniest place I’ve ever worked.
+TripleTen is a personalized learning service that takes you from gaining skills to employment. Named by [Fortune](https://fortune.com/education/articles/best-software-engineering-bootcamps/) as the best overall tech bootcamp in the US, it has over 20k monthly active learners across the US and Latin America. TripleTen is a part of Nebius, a $20B NASDAQ-listed AI cloud company. This is also the funniest place I’ve ever worked.
 
 <div className="wide-block">
     <BrowserContainerGallery
