--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -132,11 +132,9 @@ Over time, PostHog became the core analytics and experimentation platform for th
 - Unshipped several low-usage features based on insights from automatically captured data.
 - Moved student activity tracking used by our learning support team from a clunky in-house system to reliable PostHog events within our main infrastructure.
 
----
+<hr data-emoji="🚧" />
 
-The content below is being updated. If you’re curious to see something more relevant, please write to [hey@tonyfresher.com](mailto:hey@tonyfresher.com).
-
-🚧🚧🚧
+The content below is being updated. If you're curious to see something more relevant, please write to [hey@tonyfresher.com](mailto:hey@tonyfresher.com).
 
 ## Homepage redesign (2023)
 
