--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -117,7 +117,7 @@ Before that, our product analytics setup was pretty limited, and we had almost n
 When I started researching analytics tools, one clearly stood out—PostHog. Beyond its hog-themed charm, it turned out to be a powerful and flexible data infrastructure toolkit.
 
 <BrowserContainerImage src="/tripleten/posthog.png" alt="PostHog UI" aspectRatio="16 / 9" />
-<span className="caption">PostHog interface</span>
+<span className="caption">PostHog toolset</span>
 
 I set up and maintained the PostHog integration from early experiments to a
 full rollout across all platform surfaces. It was an interesting challenge because it combined
