Add part about PoP states

--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -44,7 +44,7 @@ The product was born in the early 2020s—a time of economic uncertainty, especi
 
 I joined TripleTen as part of the founding team and spent four years shaping the product design and adapting it to the needs of demanding US students. Over time, I took on broader design leadership across the organization—supporting other designers while keeping my sleeves firmly rolled up.
 
-## Dot <img src="/tripleten/dot/icon.svg" alt="Dot" className="inline w-10" />, your AI buddy
+## Dot<img src="/tripleten/dot/icon.svg" alt="Dot" className="inline h-10 pl-1" />, your AI buddy
 
 One of the biggest challenges in online learning is the lack of real-time support. In a classroom or even on Zoom, it’s easy to ask a question and get help right away. But when you’re studying online, that instant feedback is missing. That’s why TripleTen made human support—tutors, learning coaches, and community—one of its main priorities.
 
@@ -90,9 +90,13 @@ So we decided to bring projects onto the platform itself. Today, most profession
     />
 </div>
 
-It was a major UX challenge. I had to rethink the entire platform layout so students could easily work in a complex environment while still having quick access to all the usual platform tools. The goal was to make it feel like the same familiar place—but with the power of a full professional workspace.
+It was a big UX challenge. I had to rethink the whole platform layout so students could work comfortably in a complex environment while still having quick access to all their usual tools. The goal was to make it feel like the same familiar place—just upgraded into a full professional workspace.
 
-It was also a big technical challenge. The first version for VS Code took three months to build, but the gradual rollout, iteration, and support for more tools took another year.
+Another major challenge was simplifying how projects work. Their workflows could get really complex, so I had to break them down into the clearest possible model. Now each project consists of just a few steps that make immediate sense to students, while their layout and look can still vary depending on the project type and status.
+
+<div className="wide-block">![Different states](/tripleten/pop/states.png)</div>
+
+It was a fun design project but also a big technical one—making the platform and external workspace work smoothly together. With a tight-knit team of engineers, we built the first VS Code version in three months, but the full rollout, iteration, and support for more tools took another year.
 
 <div className="wide-block">
     <BrowserContainerGallery
@@ -106,9 +110,9 @@ It was also a big technical challenge. The first version for VS Code took three 
 </div>
 <span className="caption">Different project environments</span>
 
-As a result, project work became a native part of the platform. Students can now work on projects while having access to all familiar tools, including chat with Dot. The team has full visibility into what happens during projects, making things like the A/B experiment with Dot support mentioned above possible. The entire learning process now happens within the platform, and students spend 31% of their time in the project workspace.
+As a result, project work became a native part of the platform. Students can now work on projects without the hassle of setting anything up locally, and they have access to all familiar platform tools. The team has full visibility into what happens during projects, making things like the A/B experiment with Dot support mentioned above possible. The entire learning process now happens within the platform, and students spend 31% of their time in the project workspace.
 
-## Product observability
+## Observability
 
 In my last year at TripleTen, one of the big things I focused on was helping us understand how students actually use the platform.
 
