--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -74,13 +74,13 @@ We managed to make Dot more than just another AI bot—it became a real buddy on
 
 ## Projects on the platform
 
-TripleTen’s approach is built around project-based learning—and projects are the biggest, most complex part of it. Most of a student’s time is spent working on projects, and that’s also where they need the most help.
+TripleTen’s approach is built around project-based learning—and projects are the biggest, most complex part of it. Students spend most of their time working on them, and that’s also where they need extra support.
 
 In the past, these projects relied on a mix of external tools, while the platform itself was mostly a textbook with instructions. Once you started a project, you were on your own, setting up a complex coding environment locally.
 
-That created a painful UX barrier for students—and a blind spot for the product team, since we had no visibility into the part where students spent most of their time.
+That created a painful UX barrier for students and a blind spot for the product team, since we had no visibility into the part where students spent most of their time.
 
-So we decided to bring projects onto the platform itself. Today, most professional tools students use (VS Code, JupyterLab, Google Sheets, Figma, and more) are web-based, which made it finally possible.
+So we decided to bring projects onto the platform itself. Today, most professional tools students use (VS Code, JupyterLab, Google Sheets, Figma, and more) are web-based, which made it technically possible.
 
 <div className="wide-block">
     <BrowserContainerImage
@@ -90,13 +90,13 @@ So we decided to bring projects onto the platform itself. Today, most profession
     />
 </div>
 
-It was a big UX challenge. I had to rethink the whole platform layout so students could work comfortably in a complex environment while still having quick access to all their usual tools. The goal was to make it feel like the same familiar place—just upgraded into a full professional workspace.
+It was a big UX challenge that required rethinking the whole platform layout so students could work comfortably in a complex environment while still having easy access to all the platform tools. The goal was to make it feel like the same familiar place—just with the features of a full professional workspace.
 
-Another major challenge was simplifying how projects work. Their workflows could get really complex, so I had to break them down into the clearest possible model. Now each project consists of just a few steps that make immediate sense to students, while their layout and look can still vary depending on the project type and status.
+Another major challenge was simplifying project statuses. Project workflows could get really complex, so I had to break them down into the clearest possible model. Now each project requires completing only a few steps that make immediate sense to students. At the same time, the layout and look of each step can vary significantly depending on the project type and status.
 
 <div className="wide-block">![Different states](/tripleten/pop/states.png)</div>
 
-It was a fun design project but also a big technical one—making the platform and external workspace work smoothly together. With a tight-knit team of engineers, we built the first VS Code version in three months, but the full rollout, iteration, and support for more tools took another year.
+It was a fun design project but also a big technical one—especially when it came to making the platform and external workspaces work seamlessly together. With a tight-knit team of engineers, we built the first VS Code version in three months, but the full rollout, iterations, and support for more tools took another year.
 
 <div className="wide-block">
     <BrowserContainerGallery
@@ -110,7 +110,7 @@ It was a fun design project but also a big technical one—making the platform a
 </div>
 <span className="caption">Different project environments</span>
 
-As a result, project work became a native part of the platform. Students can now work on projects without the hassle of setting anything up locally, and they have access to all familiar platform tools. The team has full visibility into what happens during projects, making things like the A/B experiment with Dot support mentioned above possible. The entire learning process now happens within the platform, and students spend 31% of their time in the project workspace.
+As a result, project work became a native part of the platform. Students can now work on projects without the hassle of setting anything up locally, and they have access to all familiar platform tools. The team has full visibility into what happens during projects, making things like the A/B experiment with Dot support mentioned above possible. The entire learning process now happens within the platform, and students spend 31% of their time in the new project workspace.
 
 ## Observability
 
