--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -114,27 +114,24 @@ As a result, project work became a native part of the platform. Students can now
 
 ## Observability
 
-In my last year at TripleTen, one of the big things I focused on was helping us understand how students actually use the platform.
+In my last year at TripleTen, one of the big things I focused on was helping us understand how students actually study on the platform.
 
-Before that, our product analytics setup was pretty limited, and we had almost no way to observe real student behavior. We often didn’t know if our changes actually worked. UI decisions lacked context, and we mostly relied on personal opinions.
+Before that, our product analytics setup was quite limited, and we had almost no way to observe real student behavior. We often didn’t know whether what we shipped actually worked. UI decisions lacked context, and we mostly relied on personal opinions.
 
-When I started researching analytics tools, one clearly stood out—PostHog. Beyond its hog-themed charm, it turned out to be a powerful and flexible data infrastructure toolkit.
+When I started researching analytics tools, one clearly stood out—PostHog. Beyond its hog-themed aesthetic, it proved to be a powerful and flexible observability toolkit.
 
 <BrowserContainerImage src="/tripleten/posthog.png" alt="PostHog UI" aspectRatio="16 / 9" />
 <span className="caption">PostHog toolset</span>
 
-I set up and maintained the PostHog integration from early experiments to a
-full rollout across all platform surfaces. It was an interesting challenge because it combined
-setting up structure inside PostHog, maintaining integration code, resolving issues, and driving awareness and
-adoption across the company.
+I set up and maintained the PostHog integration from early experiments to a full rollout across all platform surfaces. It was an interesting challenge because it combined setting up structure inside PostHog, maintaining integration code, resolving issues, and driving awareness and adoption across the company.
 
 Over time, PostHog became the core analytics and experimentation platform for the product team and was broadly adopted across the org. Here’s what we achieved with it:
 
 - Iterated on freshly released features based on usage data, session replays, and survey feedback.
-- Ran experiments to measure impact—from getting 72% more feedback responses by tweaking a button label to discovering that 34% more students submit their projects with our AI buddy.
-- Rolled out and refined new features gradually using feature flags.
+- Ran experiments to measure impact—from getting 72% more feedback responses by tweaking a button label to proving that 34% more students submit their projects with Dot support.
+- Started rolling out new features gradually using feature flags.
 - Unshipped several low-usage features based on insights from automatically captured data.
-- Moved student activity tracking used by our learning support team from a clunky in-house system to reliable PostHog events within our main infrastructure.
+- Moved student activity tracking for the learning support team from a clunky in-house system to reliable PostHog events within the main infrastructure.
 
 <hr data-emoji="🚧" />
 
