--- a/src/app/_home/components/about.mdx
+++ b/src/app/_home/components/about.mdx
@@ -1,5 +1,5 @@
 Hey! I'm Anton ![My photo](/me.jpeg) a product designer and engineer.
 
-Over the past 8 years, I’ve found my place in tight-knit early-stage teams where I’m comfortable navigating uncertainty and doing whatever it takes to build a product people love.
+Over the past 8 years in tech, I’ve learned I’m most useful in fast-paced early-stage teams—helping navigate uncertainty and build products people love.
 
-In many parts of my life, I’m a generalist. I love moving across roles and functions to find novel solutions, ship high quality products, and—most importantly—have fun along the way.
+In many parts of my life, I’m a generalist. I love moving across roles and functions to find creative solutions, ship high-quality products, and—most importantly—have fun along the way.
