--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -112,6 +112,22 @@ It was a fun design project but also a big technical one—especially when it ca
 
 As a result, project work became a native part of the platform. Students can now work on projects without the hassle of setting anything up locally, and they have access to all familiar platform tools. The team has full visibility into what happens during projects, making things like the A/B experiment with Dot support mentioned above possible. The entire learning process now happens within the platform, and students spend 31% of their time in the new project workspace.
 
+## Visual language
+
+One of the things I truly loved at TripleTen was shaping its visual language and bringing the brand’s voice into the interface. During my time there, I was the key maintainer of our shared design system.
+
+<div className="wide-block max-lg:hidden">![Design system](/tripleten/design-system-wide.png)</div>
+<div className="lg:hidden">![Design system](/tripleten/design-system-square.png)</div>
+<div className="caption">TripleTen design system elements</div>
+
+A big challenge was keeping everything consistent and helping the other 25 designers across product, brand, and curriculum teams align and contribute effectively to the shared system. It was structured as a tree of modules—from broad foundations to more specific UI libraries, brand components, and curriculum guidelines. These Figma files and the shared approach behind them took shape through regular design critiques and a steady design-system routine.
+
+The collaboration between different design functions was crucial in shaping TripleTen’s unique tone of voice. I always wanted learning to feel approachable, supportive, and not boring. That’s why our ToV showed up not only in the copy but also in the small details of the interface.
+
+<div className="wide-block">![UI](/tripleten/ui.png)</div>
+
+In my last year, I took this further by stepping into design engineering, shaping not just visuals but also interactions and polish. My code contributions added up to 47 PRs across new features, polish, papercuts, and analytics.
+
 ## Observability
 
 In my last year at TripleTen, one of the big things I focused on was helping us understand how students actually study on the platform.
