--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -120,7 +120,7 @@ One of the things I truly loved at TripleTen was shaping its visual language and
 <div className="lg:hidden">![Design system](/tripleten/design-system-square.png)</div>
 <div className="caption">TripleTen design system elements</div>
 
-A big challenge was keeping everything consistent and helping the other 25 designers across product, brand, and curriculum teams align and contribute effectively to the shared system. It was structured as a tree of modules—from broad foundations to more specific UI libraries, brand components, and curriculum guidelines. These Figma files and the shared approach behind them took shape through regular design critiques and a steady design-system routine.
+One of the hardest challenges was keeping everything consistent and helping the other 25 designers across product, brand, and curriculum teams align and contribute effectively to the shared system. To make it easier for everyone, the system was structured as a tree of modules—from broad foundations to more specific UI libraries, brand components, and curriculum guidelines. These Figma files and the shared approach behind them took shape through regular design critiques and a steady design-system routine.
 
 The collaboration between different design functions was crucial in shaping TripleTen’s unique tone of voice. I always wanted learning to feel approachable, supportive, and not boring. That’s why our ToV showed up not only in the copy but also in the small details of the interface.
 
