--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -139,7 +139,7 @@ One of the things I truly loved at TripleTen was shaping its visual language and
 
 <div className="wide-block max-lg:hidden">![Design system](/tripleten/design-system-wide.png)</div>
 <div className="lg:hidden">![Design system](/tripleten/design-system-square.png)</div>
-<div className="caption">TripleTen design system elements</div>
+<div className="caption">TripleTen design system excerpts</div>
 
 One of the hardest challenges was keeping everything consistent and helping the other 25 designers across product, brand, and curriculum teams align and contribute effectively to the shared system. To make it easier for everyone, the system was structured as a tree of modules—from broad foundations to more specific UI libraries, brand components, and curriculum guidelines. These Figma files and the shared approach behind them took shape through regular design critiques and a steady design-system routine.
 
