--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -293,3 +293,8 @@ The new homepage was designed with scalability in mind, allowing for new feature
     />
 </div>
 <span className="caption">Features based on the new homepage</span>
+
+<div className="mt-24 text-4xl font-medium max-xl:text-3xl max-sm:mt-16 max-sm:text-2xl">
+    Now that you know me a little better, let’s do something cool together. Drop me a line at
+    hey@tonyfresher.com
+</div>
