--- a/src/app/_home/components/about.mdx
+++ b/src/app/_home/components/about.mdx
@@ -11,8 +11,8 @@ export default function Story({ children }) {
     )
 }
 
-Over the past 8 years in tech, I've learned I fit right in with fast-paced early-stage teams, helping navigate uncertainty and build products people love.
+Over the past 8 years in tech, I've learned I fit right in with fast-paced early-stage teams, where adapting to change and navigating uncertainty are part of the adventure.
 
-In lots of parts of my life, I'm a generalist. I love moving across roles and functions to ship great products, find creative solutions, and—most importantly—have fun along the way.
+In lots of parts of my life, I'm a generalist. I love moving across roles and functions to find creative solutions, ship products people love, and—most importantly—have fun along the way.
 
 I'm always up to meet kindred people. To get in touch, drop me a line at hey@tonyfresher.com.
