--- a/src/app/_home/components/about.mdx
+++ b/src/app/_home/components/about.mdx
@@ -15,4 +15,10 @@ Over the past 8 years in tech, I've learned I fit right in with fast-paced early
 
 In lots of parts of my life, I'm a generalist. I love moving across roles and functions to find creative solutions, ship products people love, and—most importantly—have fun along the way.
 
+Beyond writing words and moving pixels, I try to explore the world as much as I can. Discovering amazing places, people, and cultural gems grounds and inspires me.
+
+![Tottori](/story/tottori.jpg)
+
+<span className="caption">My favorite place on Earth: Tottori, Japan</span>
+
 I'm always up to meet kindred people. To get in touch, drop me a line at hey@tonyfresher.com.
