--- a/src/app/_home/components/about.mdx
+++ b/src/app/_home/components/about.mdx
@@ -21,4 +21,4 @@ Beyond writing words and moving pixels, I try to explore the world as much as I 
 
 <span className="caption">My favorite place on Earth: Tottori, Japan</span>
 
-I'm always up to meet kindred people. To get in touch, drop me a line at hey@tonyfresher.com.
+I'm always up to meet kindred spirits. To get in touch, drop me a line at hey@tonyfresher.com.
