--- a/src/app/_home/components/about.mdx
+++ b/src/app/_home/components/about.mdx
@@ -17,7 +17,7 @@ In lots of parts of my life, I'm a generalist. I love moving across roles and fu
 
 Beyond writing words and moving pixels, I try to explore the world as much as I can. Discovering amazing places, people, and cultural gems grounds and inspires me.
 
-![Tottori](/story/tottori.jpg)
+![Tottori](/about/tottori.jpg)
 
 <span className="caption">My favorite place on Earth: Tottori, Japan</span>
 
