--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -17,7 +17,7 @@ export default function Page({ children }) {
 export const meta = {
     id: 'tripleten',
     title: 'TripleTen',
-    description: 'A few bits from my work at TripleTen',
+    description: 'A few bits from my work at TripleTen, an AI-powered tech education platform',
     image: 'ui.png',
     link: 'https://tripleten.com',
     period: '2022-2025'
